
// Automatically generated by goyang https://github.com/openconfig/goyang
// compiled 2017-08-09T07:03:53Z
// do not delete the next line
// goyang-version 1
// module "huawei-devm"
// revision "2017-03-23"
// revision "2013-01-01"
// namespace "http://www.huawei.com/netconf/vrp/huawei-devm"

//package huawei_devm;
//package "huawei_devm";


/*
Machetes
export GOROOT=/usr/local/go
export GOPATH=$HOME/go
export GOBIN=$GOPATH/bin
export PATH=$PATH:$GOROOT:$GOPATH:$GOBIN
display telemetry proto-file path huawei-ifm:ifm/interfaces/interface/ifStatistics

*/
syntax = "proto3";
package huawei_devm;

message Devm {
  message CpuInfos {
    message CpuInfo {
      uint32 entIndex = 1;  //0x08
      uint32 interval = 2;  //0x10
      uint32 ovloadThreshold = 3;   //0x18
      string position = 4;   //0x22
      uint32 systemCpuUsage = 5;  //0x28
      uint32 unovloadThreshold = 6;   //0x30
    }
    repeated CpuInfo cpuInfo = 1;  //0x1a
  }
  CpuInfos cpuInfos = 5; //0x2a
  message EthPortStaStss {
    message EthPortStaSts {
      uint32 ifName = 1;  //0x08
      uint64 receiveByte = 2;   //0x10
      uint64 receivePacket = 3; //0x18
      uint64 sendByte = 4;   //0x20
      uint64 sendPacket = 5; //0x28
    }
    repeated EthPortStaSts ethPortStaSts = 1;  //0x0a
  }
  EthPortStaStss ethPortStaStss = 7;  //0x3a
  message MemoryInfos {
    message MemoryInfo {
      uint32 doMemoryFree = 1;  //0x08
      uint32 doMemoryTotal = 2;  //0x10
      uint32 doMemoryUsage = 3;  //0x18
      uint32 doMemoryUse = 4;   //0x20
      uint32 entIndex = 5;  //0x28
      uint32 osMemoryFree = 6;   //0x30
      uint32 osMemoryTotal = 7;  //0x38
      uint32 osMemoryUsage = 8;  //0x40
      uint32 osMemoryUse = 9;   //0x48
      uint32 ovloadThreshold = 10; //0x50
      string position = 11;  //0x5a
      uint32 simpleMemoryFree = 12;  //0x60
      uint32 simpleMemoryTotal = 13;  //0x68
      uint32 simpleMemoryUsage = 14;  //0x70
      uint32 simpleMemoryUse = 15;  //0x78
      uint32 unovloadThreshold = 16;  //0x80 01
    }
    repeated MemoryInfo memoryInfo = 1; //0x0e
  }
  MemoryInfos memoryInfos = 15;  //0x7e

  message Ports {
    message Port {
      string position = 1;  //0x5a
      uint32 entIndex = 2;  //0x28
      message OpticalInfo {
       string txPower = 1;
       string rxPower = 2;
       int32  optBias = 3;
       int32  optVoltage = 4;
       int32  optTemperature = 5;
	  }
      OpticalInfo opticalInfo = 3;
    }
    repeated Port port = 1; //0x0e
  }
  Ports ports = 22;  //0x7e

  message Fans {
    message Fan {
      string position = 1;
      uint32 speed = 2;
    }
    repeated Fan fan = 1;
  }
  Fans fans = 24;

  message TemperatureInfos {
    message TemperatureInfo {
      string address = 1;
      uint32 channel = 2;
      string position = 3;
      uint32 i2c = 4;
      int32 currentTemperature = 5;
    }
    repeated TemperatureInfo temperatureInfo = 1;
  }
  TemperatureInfos temperatureInfos = 52;

  message PowerSupplys {
    message PowerSupply {
      string position = 1;
      message PowerEnvironments {
        message PowerEnvironment {
          uint32 pemIndex = 1;
          string powerValue = 2;
          string voltageValue = 3;
        }
        repeated PowerEnvironment powerEnvironment = 1;
      }
      PowerEnvironments powerEnvironments = 7;
    }
    repeated PowerSupply powerSupply = 1;
  }
  PowerSupplys powerSupplys = 46;
}