syntax = "proto3";
// Automatically generated by goyang https://github.com/openconfig/goyang
// compiled 2017-10-11T12:26:24Z
// do not delete the next line
// goyang-version 1
// module "huawei-driver"
// revision "2017-03-23"
// revision "2013-01-01"
// namespace "http://www.huawei.com/netconf/vrp/huawei-driver"

package huawei_driver;

message HwBoardFail {
  uint32 EntPhysicalIndex = 1;
  string EntPhysicalName = 2;
  uint32 EntityPhysicalIndex = 3;
  uint32 EntityTrapFaultID = 4;
  uint32 EntityType = 5;
  string Reason = 6;
}

message HwBoardFailResume {
  uint32 EntPhysicalIndex = 1;
  string EntPhysicalName = 2;
  uint32 EntityPhysicalIndex = 3;
  uint32 EntityTrapFaultID = 4;
  uint32 EntityType = 5;
  string Reason = 6;
}

message HwBoardInvalid {
  uint32 EntPhysicalIndex = 1;
  string EntPhysicalName = 2;
  uint32 EntityPhysicalIndex = 3;
  uint32 EntityTrapFaultID = 4;
  uint32 EntityType = 5;
  string Reason = 6;
}

message HwBoardInvalidResume {
  uint32 EntPhysicalIndex = 1;
  string EntPhysicalName = 2;
  uint32 EntityPhysicalIndex = 3;
  uint32 EntityTrapFaultID = 4;
  uint32 EntityType = 5;
  string Reason = 6;
}

message HwEntityInvalid {
  uint32 BaseTrapEventType = 1;
  uint32 BaseTrapSeverity = 2;
  uint32 EntContainedIn = 3;
  string EntPhysicalName = 4;
  uint32 EntityPhysicalIndex = 5;
  uint32 ProbableCause = 6;
  string ReasonDescription = 7;
  string RelativeResource = 8;
}

message HwEntityResume {
  uint32 BaseTrapEventType = 1;
  uint32 BaseTrapSeverity = 2;
  uint32 EntContainedIn = 3;
  string EntPhysicalName = 4;
  uint32 EntityPhysicalIndex = 5;
  uint32 ProbableCause = 6;
  string ReasonDescription = 7;
  string RelativeResource = 8;
}

message HwOpticalInvalid {
  uint32 EntPhysicalIndex = 1;
  string EntPhysicalName = 2;
  uint32 EntityPhysicalIndex = 3;
  uint32 EntityTrapFaultID = 4;
  string ReasonDescription = 5;
}

message HwOpticalInvalidResume {
  uint32 EntPhysicalIndex = 1;
  string EntPhysicalName = 2;
  uint32 EntityPhysicalIndex = 3;
  uint32 EntityTrapFaultID = 4;
  string ReasonDescription = 5;
}

message HwRATEOFTRAFFICResume {
  uint32 EntPhysicalIndex = 1;
  string EntPhysicalName = 2;
  uint32 EntityPhysicalIndex = 3;
  uint32 EntityTrapFaultID = 4;
  string Reason = 5;
}

message HwRATEOFTRAFFICRising {
  uint32 EntPhysicalIndex = 1;
  string EntPhysicalName = 2;
  uint32 EntityPhysicalIndex = 3;
  uint32 EntityTrapFaultID = 4;
  string Reason = 5;
}