syntax = "proto3";
// Automatically generated by goyang https://github.com/openconfig/goyang
// compiled 2017-09-29T01:42:07Z
// do not delete the next line
// goyang-version 1
// module "huawei-sem"
// revision "2013-01-01"
// namespace "http://www.huawei.com/netconf/vrp/huawei-sem"

package huawei_sem;

message HwCPUUtilizationResume {
  int32 ChassisId = 1;
  int32 CpuUsage = 2;
  int32 CpuUsageThreshold = 3;
  int32 EventType = 4;
  int32 PhysicalIndex = 5;
  string PhysicalName = 6;
  int32 ProbableCause = 7;
  string RelativeResource = 8;
  int32 SlotId = 9;
  int32 SubIndex = 10;
  int32 TrapSeverity = 11;
  int32 Unit = 12;
  int32 UsageType = 13;
}

message HwCPUUtilizationRisingAlarm {
  int32 ChassisId = 1;
  int32 CpuUsage = 2;
  int32 CpuUsageThreshold = 3;
  int32 EventType = 4;
  int32 PhysicalIndex = 5;
  string PhysicalName = 6;
  int32 ProbableCause = 7;
  string RelativeResource = 8;
  int32 SlotId = 9;
  int32 SubIndex = 10;
  int32 TrapSeverity = 11;
  int32 Unit = 12;
  int32 UsageType = 13;
}

message HwStorageUtilizationResume {
  int32 ChassisId = 1;
  int32 EventType = 2;
  int32 PhysicalIndex = 3;
  string PhysicalName = 4;
  int32 ProbableCause = 5;
  uint32 ReasonId = 6;
  string RelativeResource = 7;
  int32 SlotId = 8;
  int32 SubIndex = 9;
  int32 TrapSeverity = 10;
  int32 Unit = 11;
  int32 UsageThreshold = 12;
  int32 UsageType = 13;
  int32 UsageValue = 14;
}

message HwStorageUtilizationRisingAlarm {
  int32 ChassisId = 1;
  int32 EventType = 2;
  int32 PhysicalIndex = 3;
  string PhysicalName = 4;
  int32 ProbableCause = 5;
  uint32 ReasonId = 6;
  string RelativeResource = 7;
  int32 SlotId = 8;
  int32 SubIndex = 9;
  int32 TrapSeverity = 10;
  int32 Unit = 11;
  int32 UsageThreshold = 12;
  int32 UsageType = 13;
  int32 UsageValue = 14;
}

message HwSystemConfigError {
  int32 EntityTrapFaultID = 1;
}

message HwSystemConfigResume {
  int32 EntityTrapFaultID = 1;
}

message Sem {
  message OsGrpInfos {
    message OsGrpInfo {
      string boardID = 1;
      string osGrpName = 2;
    }
    repeated OsGrpInfo osGrpInfo = 1;
  }
  OsGrpInfos osGrpInfos = 1;
}

// Do not delete the lines below, they preserve tag information for goyang.
// goyang-tag HwCPUUtilizationResume ChassisId/int32 1
// goyang-tag HwCPUUtilizationResume CpuUsage/int32 2
// goyang-tag HwCPUUtilizationResume CpuUsageThreshold/int32 3
// goyang-tag HwCPUUtilizationResume EventType/int32 4
// goyang-tag HwCPUUtilizationResume PhysicalIndex/int32 5
// goyang-tag HwCPUUtilizationResume PhysicalName/string 6
// goyang-tag HwCPUUtilizationResume ProbableCause/int32 7
// goyang-tag HwCPUUtilizationResume RelativeResource/string 8
// goyang-tag HwCPUUtilizationResume SlotId/int32 9
// goyang-tag HwCPUUtilizationResume SubIndex/int32 10
// goyang-tag HwCPUUtilizationResume TrapSeverity/int32 11
// goyang-tag HwCPUUtilizationResume Unit/int32 12
// goyang-tag HwCPUUtilizationResume UsageType/int32 13
// goyang-tag HwCPUUtilizationRisingAlarm ChassisId/int32 1
// goyang-tag HwCPUUtilizationRisingAlarm CpuUsage/int32 2
// goyang-tag HwCPUUtilizationRisingAlarm CpuUsageThreshold/int32 3
// goyang-tag HwCPUUtilizationRisingAlarm EventType/int32 4
// goyang-tag HwCPUUtilizationRisingAlarm PhysicalIndex/int32 5
// goyang-tag HwCPUUtilizationRisingAlarm PhysicalName/string 6
// goyang-tag HwCPUUtilizationRisingAlarm ProbableCause/int32 7
// goyang-tag HwCPUUtilizationRisingAlarm RelativeResource/string 8
// goyang-tag HwCPUUtilizationRisingAlarm SlotId/int32 9
// goyang-tag HwCPUUtilizationRisingAlarm SubIndex/int32 10
// goyang-tag HwCPUUtilizationRisingAlarm TrapSeverity/int32 11
// goyang-tag HwCPUUtilizationRisingAlarm Unit/int32 12
// goyang-tag HwCPUUtilizationRisingAlarm UsageType/int32 13
// goyang-tag HwStorageUtilizationResume ChassisId/int32 1
// goyang-tag HwStorageUtilizationResume EventType/int32 2
// goyang-tag HwStorageUtilizationResume PhysicalIndex/int32 3
// goyang-tag HwStorageUtilizationResume PhysicalName/string 4
// goyang-tag HwStorageUtilizationResume ProbableCause/int32 5
// goyang-tag HwStorageUtilizationResume ReasonId/uint32 6
// goyang-tag HwStorageUtilizationResume RelativeResource/string 7
// goyang-tag HwStorageUtilizationResume SlotId/int32 8
// goyang-tag HwStorageUtilizationResume SubIndex/int32 9
// goyang-tag HwStorageUtilizationResume TrapSeverity/int32 10
// goyang-tag HwStorageUtilizationResume Unit/int32 11
// goyang-tag HwStorageUtilizationResume UsageThreshold/int32 12
// goyang-tag HwStorageUtilizationResume UsageType/int32 13
// goyang-tag HwStorageUtilizationResume UsageValue/int32 14
// goyang-tag HwStorageUtilizationRisingAlarm ChassisId/int32 1
// goyang-tag HwStorageUtilizationRisingAlarm EventType/int32 2
// goyang-tag HwStorageUtilizationRisingAlarm PhysicalIndex/int32 3
// goyang-tag HwStorageUtilizationRisingAlarm PhysicalName/string 4
// goyang-tag HwStorageUtilizationRisingAlarm ProbableCause/int32 5
// goyang-tag HwStorageUtilizationRisingAlarm ReasonId/uint32 6
// goyang-tag HwStorageUtilizationRisingAlarm RelativeResource/string 7
// goyang-tag HwStorageUtilizationRisingAlarm SlotId/int32 8
// goyang-tag HwStorageUtilizationRisingAlarm SubIndex/int32 9
// goyang-tag HwStorageUtilizationRisingAlarm TrapSeverity/int32 10
// goyang-tag HwStorageUtilizationRisingAlarm Unit/int32 11
// goyang-tag HwStorageUtilizationRisingAlarm UsageThreshold/int32 12
// goyang-tag HwStorageUtilizationRisingAlarm UsageType/int32 13
// goyang-tag HwStorageUtilizationRisingAlarm UsageValue/int32 14
// goyang-tag HwSystemConfigError EntityTrapFaultID/int32 1
// goyang-tag HwSystemConfigResume EntityTrapFaultID/int32 1
// goyang-tag Sem osGrpInfos/OsGrpInfos 1
// goyang-tag Sem_OsGrpInfos osGrpInfo/OsGrpInfo[] 1
// goyang-tag Sem_OsGrpInfos_OsGrpInfo boardID/string 1
// goyang-tag Sem_OsGrpInfos_OsGrpInfo osGrpName/string 2
