syntax = "proto3";
// Automatically generated by goyang https://github.com/openconfig/goyang
// compiled 2018-01-10T03:23:30Z
// do not delete the next line
// goyang-version 1
// module "huawei-telemEmdi"
// revision "2017-12-21"
// namespace "http://www.huawei.com/netconf/vrp/huawei-telemEmdi"

package huawei_telemEmdi;

message TelemEmdi {
  message EmdiTelemReps {
    message EmdiTelemRep {
      uint32 bdId = 1;
      uint32 channelGroupAddress = 2;
      string channelName = 3;
      uint32 channelSourceAddress = 4;
      uint32 channelVpnType = 5;
      uint32 monitorPeriod = 6;
      uint64 monitorTime = 7;
      uint32 reportPeriod = 8;
      uint64 reportTime = 9;
      uint64 totalDisorderdPacketsNum = 10;
      uint64 totalLossPacketsNum = 11;
      uint64 totalRecvPacketsNum = 12;
      uint32 vlanId = 13;
      string vpnName = 14;
      uint32 vrId = 15;
      string vsiName = 16;
      uint64 worstDisorderdPacketsNum = 17;
      uint64 worstLossPacketsNum = 18;
      uint64 worstRecvPacketsNum = 19;
    }
    repeated EmdiTelemRep emdiTelemRep = 1;
  }
  EmdiTelemReps emdiTelemReps = 1;

  message EmdiTelemRtps {
    message EmdiTelemRtp {
      uint32 bdId = 1;
      uint32 channelGroupAddress = 2;
      string channelName = 3;
      uint32 channelSourceAddress = 4;
      uint32 channelVpnType = 5;
      uint64 disorderdPacketsNum = 6;
      uint64 lossPacketsNum = 7;
      uint32 monitorPeriod = 8;
      uint64 monitorTime = 9;
      uint64 recvPacketsNum = 10;
      uint32 reportPeriod = 11;
      uint64 reportTime = 12;
      uint32 vlanId = 13;
      string vpnName = 14;
      uint32 vrId = 15;
      string vsiName = 16;
    }
    repeated EmdiTelemRtp emdiTelemRtp = 1;
  }
  EmdiTelemRtps emdiTelemRtps = 2;
}

// Do not delete the lines below, they preserve tag information for goyang.
// goyang-tag Emdi EmdiTelemReps/EmdiTelemReps 1
// goyang-tag Emdi EmdiTelemRtps/EmdiTelemRtps 2
// goyang-tag Emdi_EmdiTelemReps EmdiTelemRep/EmdiTelemRep[] 1
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep bdId/uint32 1
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep channelGroupAddress/uint32 2
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep channelName/string 3
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep channelSourceAddress/uint32 4
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep channelVpnType/uint32 5
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep monitorPeriod/uint32 6
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep monitorTime/uint64 7
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep reportPeriod/uint32 8
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep reportTime/uint64 9
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep totalDisorderdPacketsNum/uint64 10
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep totalLossPacketsNum/uint64 11
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep totalRecvPacketsNum/uint64 12
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep vlanId/uint32 13
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep vpnName/string 14
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep vrId/uint32 15
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep vsiName/string 16
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep worstDisorderdPacketsNum/uint64 17
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep worstLossPacketsNum/uint64 18
// goyang-tag Emdi_EmdiTelemReps_EmdiTelemRep worstRecvPacketsNum/uint64 19
// goyang-tag Emdi_EmdiTelemRtps EmdiTelemRtp/EmdiTelemRtp[] 1
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp bdId/uint32 1
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp channelGroupAddress/uint32 2
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp channelName/string 3
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp channelSourceAddress/uint32 4
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp channelVpnType/uint32 5
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp disorderdPacketsNum/uint64 6
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp lossPacketsNum/uint64 7
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp monitorPeriod/uint32 8
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp monitorTime/uint64 9
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp recvPacketsNum/uint64 10
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp reportPeriod/uint32 11
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp reportTime/uint64 12
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp vlanId/uint32 13
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp vpnName/string 14
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp vrId/uint32 15
// goyang-tag Emdi_EmdiTelemRtps_EmdiTelemRtp vsiName/string 16