syntax = "proto3";
// Automatically generated by goyang https://github.com/openconfig/goyang
// compiled 2018-01-24T06:41:04Z
// do not delete the next line
// goyang-version 1
// module "huawei-trafficmng"
// revision "2017-12-23"
// revision "2017-03-23"
// revision "2013-01-01"
// namespace "http://www.huawei.com/netconf/vrp/huawei-trafficmng"

package huawei_trafficmng;

message Trafficmng {
  message TmSlotSFUs {
    message TmSlotSFU {
      message SfuStatisticss {
        message SfuStatistics {
          uint32 chipId = 1;
          uint64 discardCells = 2;
          uint64 passCells = 3;
          uint64 sendCells = 4;
        }
        repeated SfuStatistics sfuStatistics = 1;
      }
      SfuStatisticss sfuStatisticss = 1;
      string slotId = 2;
    }
    repeated TmSlotSFU tmSlotSFU = 1;
  }
  TmSlotSFUs tmSlotSFUs = 4;
}

// Do not delete the lines below, they preserve tag information for goyang.
// goyang-tag Trafficmng tmSlotSFUs/TmSlotSFUs 4
// goyang-tag Trafficmng_TmSlotSFUs tmSlotSFU/TmSlotSFU[] 1
// goyang-tag Trafficmng_TmSlotSFUs_TmSlotSFU sfuStatisticss/SfuStatisticss 1
// goyang-tag Trafficmng_TmSlotSFUs_TmSlotSFU slotId/string 2
