// ---------------------------------------------------------------------------
// Protofilename : huawei-debug.proto
syntax = "proto3";
// Automatically generated by ProtoYang
// ProtoYang-version 1
// module huawei-debug
// revision 2020-05-29
// namespace urn:huawei:yang:huawei-debug

option go_package = "huaweiV8R12_debug";
package huaweiV8R12_debug;

message Debug {
   message CpuInfos {
      message CpuInfo {
         string position = 1 [json_name = "position"];
         uint32 overload_threshold = 2 [json_name = "overload-threshold"];
         uint32 unoverload_threshold = 3 [json_name = "unoverload-threshold"];
         uint32 interval = 4 [json_name = "interval"];
         uint32 index = 5 [json_name = "index"];
         uint32 system_cpu_usage = 6 [json_name = "system-cpu-usage"];
         uint32 monitor_number = 7 [json_name = "monitor-number"];
         uint32 monitor_cycle = 8 [json_name = "monitor-cycle"];
         string overload_state_change_time = 9 [json_name = "overload-state-change-time"];
         string current_overload_state = 10 [json_name = "current-overload-state"];
      }
      repeated CpuInfo cpu_info = 1 [json_name = "cpu-info"];
   }
   CpuInfos cpu_infos = 1 [json_name = "cpu-infos"];
   message ServiceCpuInfos {
      message ServiceCpuInfo {
         string position = 1 [json_name = "position"];
         string service_name = 2 [json_name = "service-name"];
         uint32 service_cpu_usage = 3 [json_name = "service-cpu-usage"];
      }
      repeated ServiceCpuInfo service_cpu_info = 1 [json_name = "service-cpu-info"];
   }
   ServiceCpuInfos service_cpu_infos = 2 [json_name = "service-cpu-infos"];
   message MemoryInfos {
      message MemoryInfo {
         string position = 1 [json_name = "position"];
         uint32 overload_threshold = 2 [json_name = "overload-threshold"];
         uint32 unoverload_threshold = 3 [json_name = "unoverload-threshold"];
         uint32 index = 4 [json_name = "index"];
         uint32 os_memory_total = 5 [json_name = "os-memory-total"];
         uint32 os_memory_use = 6 [json_name = "os-memory-use"];
         uint32 os_memory_free = 7 [json_name = "os-memory-free"];
         uint32 os_memory_usage = 8 [json_name = "os-memory-usage"];
         uint32 do_memory_total = 9 [json_name = "do-memory-total"];
         uint32 do_memory_use = 10 [json_name = "do-memory-use"];
         uint32 do_memory_free = 11 [json_name = "do-memory-free"];
         uint32 do_memory_usage = 12 [json_name = "do-memory-usage"];
         uint32 simple_memory_total = 13 [json_name = "simple-memory-total"];
         uint32 simple_memory_use = 14 [json_name = "simple-memory-use"];
         uint32 simple_memory_free = 15 [json_name = "simple-memory-free"];
         uint32 simple_memory_usage = 16 [json_name = "simple-memory-usage"];
         string overload_state_change_time = 17 [json_name = "overload-state-change-time"];
         string current_overload_state = 18 [json_name = "current-overload-state"];
         uint32 memreli_notice_threshold = 19 [json_name = "memreli-notice-threshold"];
         uint32 memreli_overload_threshold = 20 [json_name = "memreli-overload-threshold"];
      }
      repeated MemoryInfo memory_info = 1 [json_name = "memory-info"];
   }
   MemoryInfos memory_infos = 3 [json_name = "memory-infos"];
   message ResouceReliability {
      message MemoryReliability {
         bool enable = 1 [json_name = "enable"];
      }
      MemoryReliability memory_reliability = 1 [json_name = "memory-reliability"];
      message MemoryReliabilitySwitchoverThreshold {
         uint32 threshold = 1 [json_name = "threshold"];
      }
      MemoryReliabilitySwitchoverThreshold memory_reliability_switchover_threshold = 2 [json_name = "memory-reliability-switchover-threshold"];
      message FlowControlMessageReliability {
         bool enable = 1 [json_name = "enable"];
      }
      FlowControlMessageReliability flow_control_message_reliability = 3 [json_name = "flow-control-message-reliability"];
   }
   ResouceReliability resouce_reliability = 4 [json_name = "resouce-reliability"];
   message BoardResouceStates {
      message BoardResouceState {
         string position = 1 [json_name = "position"];
         uint32 entity_index = 2 [json_name = "entity-index"];
         string board_name = 3 [json_name = "board-name"];
         uint32 cpu_usage = 4 [json_name = "cpu-usage"];
         uint32 memory_total_size = 5 [json_name = "memory-total-size"];
         uint32 memory_used_size = 6 [json_name = "memory-used-size"];
         uint32 memory_usage = 7 [json_name = "memory-usage"];
      }
      repeated BoardResouceState board_resouce_state = 1 [json_name = "board-resouce-state"];
   }
   BoardResouceStates board_resouce_states = 5 [json_name = "board-resouce-states"];
}
